# src/main/kotlin/me/topilov/springplayground/telegram/infrastructure/config/TelegramConfiguration.kt
@@ -1,6 +1,5 @@
 package me.topilov.springplayground.telegram.infrastructure.config
 
-import me.topilov.springplayground.telegram.domain.TelegramEmojiMappingResolver
 import me.topilov.springplayground.telegram.infrastructure.tdlight.TdlightTelegramClientGateway
 import me.topilov.springplayground.telegram.infrastructure.tdlight.TelegramClientGateway
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean
@@ -14,10 +13,6 @@ import java.time.Clock
 class TelegramConfiguration {
     @Bean
     fun telegramClock(): Clock = Clock.systemUTC()
-
-    @Bean
-    fun telegramEmojiMappingResolver(properties: TelegramProperties): TelegramEmojiMappingResolver =
-        TelegramEmojiMappingResolver(properties.defaultFocusMappings.toMap())
 
     @Bean
     @ConditionalOnMissingBean(TelegramClientGateway::class)
