# src/main/kotlin/me/topilov/springplayground/telegram/infrastructure/config/TelegramProperties.kt
@@ -1,6 +1,5 @@
 package me.topilov.springplayground.telegram.infrastructure.config
 
-import me.topilov.springplayground.telegram.domain.TelegramFocusMode
 import org.springframework.boot.context.properties.ConfigurationProperties
 import java.time.Duration
 
@@ -11,7 +10,6 @@ data class TelegramProperties(
     var pendingAuthTtl: Duration = Duration.ofMinutes(10),
     var automationTokenBytes: Int = 32,
     var encryptionKeyBase64: String = "MDEyMzQ1Njc4OWFiY2RlZjAxMjM0NTY3ODlhYmNkZWY=",
-    var defaultFocusMappings: MutableMap<TelegramFocusMode, String> = mutableMapOf(),
     var apiId: Int = 0,
     var apiHash: String = "",
 )
